<resources>
    <string name="app_name">TPMS</string>

    <string name="wellcome">歡迎使用 TYREDOG 胎壓偵測器!</string>

    <string name="module_power">請將模組接上電源!</string>
    <string name="module_connected">模組已連結!</string>
    <string name="module_disconnected">模組已中斷連結!</string>

    <!--<string name="app_name">PL2303HXDSimpleTest</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_pl2303_hxdsimple_test">PL2303HXDSimpleTest</string>
    <string name="PL2303HXD_Set_BaudRate">BaudRate</string>
    <string name="PL2303HXD_OpenCOMPort">Open</string>
    <string name="PL2303HXD_WriteData">Write</string>
    <string name="PL2303HXD_ReadData">ReadData</string>
    <string name="PL2303HXD_StartThread">Start</string>
    <string name="PL2303HXD_StopThread">Stop</string>
    <string name="PL2303HXD_LoopBack">LoopBack</string>
    <string name="PL2303HXD_SetVIDPID">Connecting New VID PID</string>
    <string name="PL2303HXD_SetDTR">SetDTR</string>
    <string name="PL2303HXD_GetSN">GetSN</string>


    <string name="ble_not_supported">裝置不支援藍芽</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="checkscan">持續搜尋TPMS模組?</string>
    <string name="scanerror">搜尋失敗!</string>
    <string name="contiune">持續</string>
    <string name="moduleerror">模組中斷連結</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="set2wheel">二輪模式</string>
    <string name="set4wheel">四輪模式</string>
    <string name="set6wheel">六輪模式</string>


    <string name="setvoice">提示音設定</string>
    <string name="voicealarm">警報提示音</string>
    <string name="voicenotiy">通知提示音</string>
    <string name="voiceSystem">由系統設置</string>
    <string name="voiceApp">由應用設置</string>
    <string name="closeitem">　關閉音效選項</string>
    <string name="closealarm">關閉警報音</string>
    <string name="closenotiy">關閉通知音</string>


    <string name="spinPunit">壓力單位 :</string>
    <string name="spinTunit">溫度單位 :</string>
    <string name="setset">設定</string>
    <string name="setalarm">  ●  警報設定</string>
    <string name="setunit">  ●  單位設定</string>
    <string name="setsystem">  ●  系統設定</string>
    <string name="unittemp">  溫度單位</string>
    <string name="unitpress">  壓力單位</string>
    <string name="hightemp"> 過高溫度臨界值</string>
    <string name="highpress"> 過高壓力臨界值</string>
    <string name="lowpress"> 過低壓力臨界值</string>
    <string name="setinitial">回復預設值</string>
    <string name="setstop">關閉偵測</string>
    <string name="setreturn">返回主畫面</string>
    <string name="Demo">演示模式</string>
    <string name="PushScan">重啟搜尋模組</string>
    <string name="moduleint">模組中斷連結</string>


    <string name="pressalarm">輪胎胎壓異常</string>
    <string name="tempalarm">輪胎胎溫異常</string>
    <string name="sensoralarm">感測器異常</string>

    <string name="wheel0">左前輪</string>
    <string name="wheel1">右前輪</string>
    <string name="wheel2">左後輪</string>
    <string name="wheel3">右後輪</string>

    <string name="press">胎壓</string>
    <string name="temp">胎溫</string>
    <string name="sensor">感測器</string>

    <string name="pressH">高於警報值!</string>
    <string name="pressL">低於警報值!</string>
    <string name="tempH">高於警報值!</string>
    <string name="btL">電量不足!</string>


    <string name="chwok">輪位已切換</string>

    <string name="psi">Psi</string>
    <string name="bar">Bar</string>
    <string name="kgcm2">Kg/cm2</string>
    <string name="kpa">Kpa</string>
    <string name="cTemp">℃</string>
    <string name="fTemp">℉</string>


    <string name="LOGO">TYREDOG</string>
    <string name="closeapp">關閉胎壓偵測系統?</string>
    <string name="Cancel">取消</string>
    <string name="OK">確定</string>
    <string name="about">關於TYREDOG</string>
    <string name="close">關閉程式</string>
    <string name="rescan">重啟偵測</string>
    <string name="readysscan">將進行模組搜尋...</string>
    <string name="resetscan">是否重新搜尋模組?</string>


    <string name="company">JOSN Electronic Co., Ltd.</string>
    <string name="phone">Tel: (02)2299-6900</string>
    <string name="mail">Mail: sales@josn.com.tw</string>
    <string name="web">Web: www.josn.com.tw</string>
    <string name="address">Address: 3F, No.12, Wugong 6th Rd., Xinzhuang Dist., New Taipei City, 242, Taiwan</string>


    <string name="Learn">學習模式</string>
    <string name="Learx">上電學習</string>
    <string name="Lend">退出</string>
    <string name="Fac">工廠模式</string>
    <string name="Test">感度測試</string>
    <string name="Cal">開始校正</string>
    <string name="Ton">開啟接收</string>
    <string name="Toff">關閉接收</string>
    <string name="Timer">時間設定</string>
    <string name="Gerid">讀取ID</string>
    <string name="Version">模組版本</string>

    <string name="spinTimer">時間間隔 :</string>

    <string name="facexlen">已退出</string>
    <string name="faclearn">配對中</string>
    <string name="facfac">工廠模式</string>
    <string name="factest">測試模式</string>
    <string name="faccal">校正中</string>
    <string name="faccalerr">校正失敗</string>
    <string name="faccalok">校正成功</string>
    <string name="factoff">已關閉接收</string>
    <string name="facton">已開啟接收</string>
    <string name="factimer">已設定:</string>

    <string name="modefac">工廠模式</string>
    <string name="modelen">學習模式</string>
    <string name="modechk">複測模式</string>
    <string name="modecal">校正模式</string>
    <string name="modetest">測試模式</string>
    <string name="modebletest">藍芽測試</string>
    <string name="modeemode">工程模式</string>
    <string name="modeexit">一般模式</string>
    <string name="modeqa">品保模式</string>
    <string name="modever">查看版本</string>
    <string name="openfac">進入工廠模式?</string>
    <string name="epeople">工程大大</string>
    <string name="title_activity_daramain">daramain</string>


</resources>



